[package]
name = "pulseaudio"
edition = "2021"
version = "0.1.0"
authors = ["Colin Marc <hi@colinmarc.com>", "Jonas Schievink <jonasschievink@gmail.com>"]
license = "MIT"

[dependencies]
bitflags = "2.4.1"
byteorder = "1.5.0"
enum-primitive-derive = "0.3.0"
num-traits = "0.2.17"
thiserror = "1.0.51"

[dev-dependencies]
anyhow = "1.0.76"
pretty_assertions = "1.4.0"

[features]
_integration-tests = []
