[package]
name = "pulseaudio"
description = "A native rust implementation of the PulseAudio protocol."
edition = "2021"
version = "0.1.1"
authors = ["Colin Marc <hi@colinmarc.com>", "Jonas Schievink <jonasschievink@gmail.com>"]
license = "MIT"

[workspace]
members = ["patrace"]

[dependencies]
bitflags = "2.4.1"
byteorder = "1.5.0"
enum-primitive-derive = "0.3.0"
num-traits = "0.2.17"
thiserror = "1.0.51"

[dev-dependencies]
anyhow = "1.0.76"
hound = "3.5.1"
indicatif = "0.17.7"
mio = { version = "0.8.10", features = ["os-ext", "os-poll", "net"] }
mio-timerfd = "0.2.0"
pretty_assertions = "1.4.0"

[features]
_integration-tests = []

[patch.crates-io]
mio-timerfd = { git = "https://github.com/colinmarc/mio-timerfd.git" }
