[package]
name = "patrace"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
bytes = "1.5.0"
chrono = "0.4.31"
clap = { version = "4.4.18", features = ["derive"] }
console = "0.15.8"
mio = { version = "0.8.10", features = ["os-ext", "net", "os-poll"] }
pulseaudio = { version = "0.3.1", path = ".." }
